--- a/cxprint.html
+++ b/cxprint.html
@@ -975,7 +975,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-07-13
+Latest      : 2019-07-18
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1536,6 +1536,7 @@ forward declaration
 <dd>
 
 <p>cxprint xpos : x position ypos : y position starting from 0,0 Calls styledWrite with args given</p>
+<p>enough space must be available in terminal window</p>
 <p>Backgroundcolors defined in cxconsts.nim colorNames can be used , that is any color ending with xxxxxxbg  like pastelpinkbg </p>
 
 
@@ -1596,7 +1597,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-18 01:26:09 UTC</small>
+        <small>Made with Nim. Generated: 2019-07-18 13:46:09 UTC</small>
       </div>
     </div>
   </div>
