--- a/cxglobal.html
+++ b/cxglobal.html
@@ -996,12 +996,14 @@ function main() {
     title="cxpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxpad<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxpdx%2Cint%2Cstring%2Cstring"
     title="cxpdx(padLen: int; s: string; paddy: string = spaces(1)): string"><wbr />cxpdx<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#cxlpad%2Cstring%2Cint%2Cstring"
-    title="cxlpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxlpad<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#cxlpdx%2Cint%2Cstring%2Cstring"
-    title="cxlpdx(padLen: int; s: string; paddy: string = spaces(1)): string"><wbr />cxlpdx<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#cxlpadN%2Cstring%2Cint%2Cstring"
-    title="cxlpadN(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxlpad<wbr />N<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxLpad%2Cstring%2Cint%2Cstring"
+    title="cxLpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cx<wbr />Lpad<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxLpdx%2Cint%2Cstring%2Cstring"
+    title="cxLpdx(padLen: int; s: string; paddy: string = spaces(1)): string"><wbr />cx<wbr />Lpdx<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxLpadN%2Cstring%2Cint%2Cstring"
+    title="cxLpadN(s: string; padlen: int; paddy: string = &quot;0&quot;): string"><wbr />cx<wbr />Lpad<wbr />N<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxLpadN%2CSomeNumber%2Cint%2Cstring"
+    title="cxLpadN(s: SomeNumber; padlen: int; paddy: string = &quot;0&quot;): string"><wbr />cx<wbr />Lpad<wbr />N<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -1799,7 +1801,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dd>
 
 <p>cxpad</p>
-<p>pads a string on the right side with spaces to specified width </p>
+<p>pads a string on the right side with spaces to specified padlen </p>
 
 
 </dd>
@@ -1808,38 +1810,47 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dd>
 
 <p>pdx</p>
-<p>same as cxpad but with padding char count in front</p>
+<p>same as cxpad but with padding char count in front </p>
 
 
 </dd>
-<a id="cxlpad,string,int,string"></a>
-<dt><pre><span class="Keyword">func</span> <a href="#cxlpad%2Cstring%2Cint%2Cstring"><span class="Identifier">cxlpad</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="cxLpad,string,int,string"></a>
+<dt><pre><span class="Keyword">func</span> <a href="#cxLpad%2Cstring%2Cint%2Cstring"><span class="Identifier">cxLpad</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>cxlpad</p>
-<p>pads a string on the left side with spaces to specified width </p>
+<p>pads a string on the left side with spaces to specified padlen </p>
 
 
 </dd>
-<a id="cxlpdx,int,string,string"></a>
-<dt><pre><span class="Keyword">func</span> <a href="#cxlpdx%2Cint%2Cstring%2Cstring"><span class="Identifier">cxlpdx</span></a><span class="Other">(</span><span class="Identifier">padLen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="cxLpdx,int,string,string"></a>
+<dt><pre><span class="Keyword">func</span> <a href="#cxLpdx%2Cint%2Cstring%2Cstring"><span class="Identifier">cxLpdx</span></a><span class="Other">(</span><span class="Identifier">padLen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>cxlpdx</p>
-<p>same as cxpad but with padding char count in front</p>
+<p>same as cxpad but with padding char count in front </p>
 
 
 </dd>
-<a id="cxlpadN,string,int,string"></a>
-<dt><pre><span class="Keyword">func</span> <a href="#cxlpadN%2Cstring%2Cint%2Cstring"><span class="Identifier">cxlpadN</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="cxLpadN,string,int,string"></a>
+<dt><pre><span class="Keyword">func</span> <a href="#cxLpadN%2Cstring%2Cint%2Cstring"><span class="Identifier">cxLpadN</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;0&quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>cxlpadN</p>
 <p>for numbers</p>
-<p>pads a string on the left side with spaces to specified width </p>
+<p>pads a string on the left side with &quot;0&quot; default or string to specified padlen </p>
+
+
+</dd>
+<a id="cxLpadN,SomeNumber,int,string"></a>
+<dt><pre><span class="Keyword">func</span> <a href="#cxLpadN%2CSomeNumber%2Cint%2Cstring"><span class="Identifier">cxLpadN</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">SomeNumber</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;0&quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+
+<p>cxlpadN</p>
+<p>for numbers</p>
+<p>pads a number on the left side with &quot;0&quot; default or string to specified padlen </p>
 
 
 </dd>
@@ -2244,7 +2255,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-18 13:46:01 UTC</small>
+        <small>Made with Nim. Generated: 2019-07-18 23:13:09 UTC</small>
       </div>
     </div>
   </div>
