--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1117,7 +1117,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-07-18
+Latest      : 2019-08-03
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1839,7 +1839,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dd>
 
 <p>cxlpadN</p>
-<p>for numbers</p>
+<p>left pad for numbers</p>
 <p>pads a string on the left side with &quot;0&quot; default or string to specified padlen </p>
 
 
@@ -1849,7 +1849,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dd>
 
 <p>cxlpadN</p>
-<p>for numbers</p>
+<p>left pad for numbers</p>
 <p>pads a number on the left side with &quot;0&quot; default or string to specified padlen </p>
 
 
@@ -2255,7 +2255,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-18 23:13:09 UTC</small>
+        <small>Made with Nim. Generated: 2019-08-03 04:40:31 UTC</small>
       </div>
     </div>
   </div>
