--- a/cxprint.html
+++ b/cxprint.html
@@ -975,7 +975,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-07-18
+Latest      : 2019-07-27
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1553,7 +1553,7 @@ forward declaration
 <span class="Identifier">cxprintln</span><span class="Punctuation">(</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">trueblue</span><span class="Punctuation">,</span><span class="Identifier">bgwhite</span><span class="Punctuation">,</span><span class="StringLit">&quot; Yes ! &quot;</span><span class="Punctuation">,</span>
           <span class="Identifier">yaleblue</span><span class="Punctuation">,</span><span class="Identifier">truetomatobg</span><span class="Punctuation">,</span><span class="StringLit">&quot; No ! &quot;</span><span class="Punctuation">,</span>
           <span class="Identifier">trueblue</span><span class="Punctuation">,</span><span class="Identifier">bgwhite</span><span class="Punctuation">,</span><span class="Identifier">styleReverse</span><span class="Punctuation">,</span><span class="StringLit">&quot; Yes ! &quot;</span><span class="Punctuation">,</span>
-          <span class="Identifier">truetomato</span><span class="Punctuation">,</span><span class="Identifier">bgwhite</span><span class="Punctuation">,</span><span class="Identifier">styleBlink</span><span class="Punctuation">,</span><span class="Identifier">styleBright</span><span class="Punctuation">,</span><span class="StringLit">&quot; Oooh, it blinks too  ! &quot;</span><span class="Punctuation">)</span></pre>
+          <span class="Identifier">truetomato</span><span class="Punctuation">,</span><span class="Identifier">darkslatebluebg</span><span class="Punctuation">,</span><span class="Identifier">styleBlink</span><span class="Punctuation">,</span><span class="Identifier">styleBright</span><span class="Punctuation">,</span><span class="StringLit">&quot; Oooh, it blinks too  ! &quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <a id="cxwrite.t,varargs[untyped]"></a>
@@ -1597,7 +1597,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-07-18 23:13:16 UTC</small>
+        <small>Made with Nim. Generated: 2019-08-03 04:40:38 UTC</small>
       </div>
     </div>
   </div>
