--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -911,7 +911,7 @@ function main() {
 <dd>
 
 <p>getWanIP</p>
-<p>a way to get your wanip </p>
+<p>get your wanip from api.ipify.org </p>
 
 
 </dd>
@@ -1073,7 +1073,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-08-03 05:18:22 UTC</small>
+        <small>Made with Nim. Generated: 2019-08-14 12:32:12 UTC</small>
       </div>
     </div>
   </div>
